Standardize firebase field name

--- a/gis/index.html
+++ b/gis/index.html
@@ -84,7 +84,7 @@
 
         // Get a reference to the database service
         const db = getDatabase(app);
-        const sensorRef = ref(db, 'DHT11');
+        const sensorRef = ref(db, 'GIS');
 
         // add marker from realtime iot devices
         function addToMap(data) {
