Update webgis and code push firebase arduino ide

--- a/gis/index.html
+++ b/gis/index.html
@@ -26,12 +26,14 @@
         <div class="m-2">
             <table class="table table-striped table-striped table-bordered" id="sensor">
                 <thead>
-                    <tr>
-                        <th>Lokasi</th>
-                        <th>Suhu</th>
-                        <th>Kelembaban</th>
-                        <th>Latitude</th>
-                        <th>Longitude</th>
+                    <tr align="center" >
+                            <th>Lokasi</th>
+                            <th>Kelas</th>
+                            <th>Suhu</th>
+                            <th>Kelembaban</th>
+                            <th>Latitude</th>
+                            <th>Longitude</th>
+                            <th>Terakhir diperbaharui</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -42,10 +44,10 @@
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
         integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous">
-    </script>
+        </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
         integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous">
-    </script>
+        </script>
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
         integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
         crossorigin=""></script>
@@ -55,13 +57,13 @@
 
         // Your web app's Firebase configuration
         const firebaseConfig = {
-            apiKey: "AIzaSyD3Wf-5jkN5EJ6g8nzssFno_6eI1aY2nY0",
-            authDomain: "contohwebgis.firebaseapp.com",
-            databaseURL: "https://contohwebgis-default-rtdb.firebaseio.com",
-            projectId: "contohwebgis",
-            storageBucket: "contohwebgis.appspot.com",
-            messagingSenderId: "926907863922",
-            appId: "1:926907863922:web:f31eb71fad111f0b2b43eb"
+            apiKey: "AIzaSyDf0bYRqPK8Sb1Fjpr8x45pqLT7JNXbLwc",
+            authDomain: "praktikumsig-2b4b1.firebaseapp.com",
+            databaseURL: "https://praktikumsig-2b4b1-default-rtdb.asia-southeast1.firebasedatabase.app",
+            projectId: "praktikumsig-2b4b1",
+            storageBucket: "praktikumsig-2b4b1.appspot.com",
+            messagingSenderId: "836740190661",
+            appId: "1:836740190661:web:3a2014a90319b60cc6bbac"
         };
 
         // Initialize Firebase
@@ -72,7 +74,7 @@
 
         // create basemap 
         const basemap = L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-        attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
+            attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
         });
 
         basemap.addTo(map);
@@ -84,25 +86,27 @@
 
         // Get a reference to the database service
         const db = getDatabase(app);
-        const sensorRef = ref(db, 'GIS');
+        const sensorRef = ref(db, 'WEBGIS');
 
         // add marker from realtime iot devices
         function addToMap(data) {
-            L.marker([data.lat, data.long])
+            L.marker([data.latitude, data.longitude])
                 .addTo(map)
-                .bindPopup(`<b>${data.lokasi}</b><br>Suhu: ${data.rh}<br>Kelembaban: ${data.temp}`);
+                .bindPopup(`<b>${data.nama} - ${data.kelas}</b><br>Suhu: ${data.suhu}<br>Kelembaban: ${data.kelembaban}<br>Terakhir Diperbaharui:<br>${data.diperbaharui}`);
         }
 
         function addToTable(data) {
-            const findRow = document.querySelector(`tr[lokasi="${data.lokasi}"]`);
+            const findRow = document.querySelector(`tr[nama="${data.nama}"]`);
             const row = findRow ?? document.createElement('tr');
-            row.setAttribute("lokasi", data.lokasi);
+            row.setAttribute("nama", data.nama);
             row.innerHTML = `
-                <td>${data.lokasi}</td>
-                <td>${data.temp}</td>
-                <td>${data.rh}</td>
-                <td>${data.lat}</td>
-                <td>${data.long}</td>
+                <td align="center" >${data.nama}</td>
+                <td align="center" >${data.kelas}</td>
+                <td align="center" >${data.kelembaban}</td>
+                <td align="center" >${data.suhu}</td>
+                <td align="center" >${data.latitude}</td>
+                <td align="center" >${data.longitude}</td>
+                <td align="center" >${data.diperbaharui}</td>
             `;
 
             if (!findRow) {
@@ -110,7 +114,7 @@
                 const tbody = table.querySelector('tbody');
                 tbody.appendChild(row);
             }
-            
+
         }
 
         onValue(sensorRef, (snapshot) => {
