--- a/sistem-informasi-geografis/praktikum-p10-2024/webclient/index.html
+++ b/sistem-informasi-geografis/praktikum-p10-2024/webclient/index.html
@@ -23,20 +23,11 @@
         <!-- Chart ThingSpeak -->
         <div class="chart">
           <!-- Chart 1 -->
-          <iframe
-            width="450"
-            height="260"
-            style="border: 1px solid #cccccc"
-            src="https://thingspeak.com/channels/2776561/charts/3?bgcolor=%23ffffff&color=%23d62020&dynamic=true&results=60&type=line&update=15"
-          ></iframe>
+          <!-- Your First Chart -->
 
           <!-- Chart 2 -->
-          <iframe
-            width="450"
-            height="260"
-            style="border: 1px solid #cccccc"
-            src="https://thingspeak.com/channels/2776561/charts/4?bgcolor=%23ffffff&color=%23d62020&dynamic=true&results=60&type=line&update=15"
-          ></iframe>
+          <!-- Your Second Chart -->
+          
         </div>
       </div>
 
